@@ -1,0 +1,45 @@
+<?php
+/*
+ * ZenMagick - Another PHP framework.
+ * Copyright (C) 2006-2010 zenmagick.org
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * User factory for admin users.
+ *
+ * @author DerManoMann
+ * @package org.zenmagick.mvc.session
+ * @version $Id$
+ */
+class ZMAdminUserFactory implements ZMUserFactory {
+
+    /**
+     * {@inheritDoc}
+     */
+    public function getUser($request) {
+        $session = $request->getSession();
+        if (null != ($adminId = $session->getValue('admin_id'))) {
+            return ZMAdminUsers::instance()->getUserForId($adminId);
+        }
+
+        return null;
+    }
+
+}
