@@ -84,6 +84,7 @@ Release 0.9.10
   ZMZenCartSacsHandler
 - upgrade Cache_Lite to 1.7.8
 - add simpltest packer; upgrade simpletest to 1.1b (18/05/2010) tarball
+- allow to delegate session user creation to ZMUserFactory implementations
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
